# blobstream-starknet

./: .all-contributorsrc  .gitignore  .tool-versions  404.html  CNAME  CONTRIBUTING.md  README.md  Scarb.toml  go.mod  go.sum  index.html  out.json  package-lock.json  package.json  print.html  searchindex.js  searchindex.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_FEATURE_REQUEST.md  02_BUG_REPORT.md  03_CODEBASE_IMPROVEMENT.md
.github/linter/: readme_style.rb
.github/workflows/: book.yml  build.yml  check.yml  contracts_build.yml  contracts_test.yml  gh-pages.yml  test-bindings.yml
bindings/: Cargo.toml
bindings/src/: bindings.rs
blobby/: package-lock.json  package.json
book/: book.toml
book/src/: README.md  SUMMARY.md
getting-started/: build.html  index.html  prerequisites.html  test.html
l3_starknet/: core_contract.html  index.html  proving_service.html  verifier.html
overview/: index.html  l3_architecture.html  read_from_celestia.html  relayer.html  write_to_celestia.html
scripts/: README.md  deploy-blobstreamx.sh  go.mod  go.sum  latest-proof-nonce.sh  main.go  prove-commitment.go  query-dri-proof.go  relay-commitments.go  request-data-commitments.sh  submit-state-diff.sh  update-data-commitments.sh  verify-da.sh  wait-for-herodotus-fulfill.sh
scripts/demo/: prove-commitment.go  prove-shares.go  query-dri-proof.go  submit-state-diff.sh
scripts/submit/: submit.go
src/: blobstreamx.cairo  interface.cairo  interfaces.cairo  lib.cairo  mocks.cairo  tests.cairo  tree.cairo  utils.cairo  verifier.cairo
(+71 files in other folders)
